added delete functionality

--- a/front/src/app/components/edit-buttons/edit-buttons.component.html
+++ b/front/src/app/components/edit-buttons/edit-buttons.component.html
@@ -1,1 +1,2 @@
-<button (click)="onclick()">Add Student</button>
+<button (click)="addClick()">Add Student</button>
+<button (click)="deleteClick()">Delete Students</button>
