--- a/front/src/app/components/student/student.component.css
+++ b/front/src/app/components/student/student.component.css
@@ -4,12 +4,23 @@
 .unclicked {
     background-color: white;
 }
-/* 
-div {
-    position:relative;
+
+.div-table {
+    display: table;         
+    width: auto;         
+    background-color: #eee;         
+    border: 1px solid #666666;         
+    border-spacing: 5px; 
 }
-span {
-    position:absolute;
-    top:0px;
-    left:0px; 
-} */
+.div-table-row {
+    display: table-row;
+    width: auto;
+    clear: both;
+}
+.div-table-col {
+    float: left;
+    display: table-column;         
+    width: 200px;         
+    background-color: #ccc;  
+}
+
