--- a/front/src/app/components/view/view.component.html
+++ b/front/src/app/components/view/view.component.html
@@ -1,8 +1,22 @@
-<div class="div-table">
-    <app-student (addEvent)="addId($event)"  
-    (removeEvent)="ids.splice(ids.indexOf($event), 1)"
-    *ngFor="let student of students" [student] = "student">
-    </app-student>
+<app-edit-buttons [ids] = "ids" (clearEvent)="this.ids=($event)"></app-edit-buttons>
+
+<div class="CellLeft">
+    <p>ID</p>
+</div>
+    
+<div class="CellCenter">
+    <p>Name</p>
 </div>
 
-<app-edit-buttons [ids] = "ids" (clearEvent)="this.ids=($event)"></app-edit-buttons>
+<div class="CellCenter">
+    <p>Surname</p>
+</div>
+
+<div class="CellRight">
+    <p>GPA</p>
+</div>
+
+<app-student (addEvent)="addId($event)"  
+    (removeEvent)="ids.splice(ids.indexOf($event), 1)"
+    *ngFor="let student of students" [student] = "student">
+</app-student>
